# old.due.moe

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/due/: __init__.py  cache.py  html.py  media.py
src/due/anilist/: collection.py  media.py  utilities.py
src/due/html/: anime.py  manga.py  utilities.py
src/due/routes/: anilist.py  auth.py  index.py  oauth.py
